WindowsForms_MoPhongKhoanNoMin/WindowsForms_MoPhongKhoanNoMin/LiteCAD/API/Litecad.bas

Public Declare Function lcImageSetTranColor Lib "Litecad.dll" (ByVal hImage As Long, ByVal bTransparent As Long, ByVal Red As Long, ByVal Green As Long, ByVal Blue As Long) As Long
Public Declare Function lcImageResize Lib "Litecad.dll" (ByVal hImage As Long, ByVal Width As Long, ByVal Height As Long) As Long
Public Declare Function lcLayerClear Lib "Litecad.dll" (ByVal hLayer As Long, ByVal hBlock As Long) As Long
Public Declare Function lcBlockClear Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hLayer As Long) As Long
Public Declare Function lcBlockPurge Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockSortEnts Lib "Litecad.dll" (ByVal hBlock As Long, ByVal bByLayers As Long) As Long
Public Declare Function lcBlockAddPoint Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcBlockAddPoint2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal PtMode As Long, ByVal PtSize As Double) As Long
Public Declare Function lcBlockAddXline Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Angle As Double, ByVal bRay As Long) As Long
Public Declare Function lcBlockAddXline2P Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal bRay As Long) As Long
Public Declare Function lcBlockAddLine Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double) As Long
Public Declare Function lcBlockAddLineDir Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Angle As Double, ByVal Dist As Double) As Long
Public Declare Function lcBlockAddLineTan Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hEnt1 As Long, ByVal hEnt2 As Long, ByVal Mode As Long) As Long
Public Declare Function lcBlockAddPolyline Lib "Litecad.dll" (ByVal hBlock As Long, ByVal FitType As Long, ByVal bClosed As Long, ByVal bFilled As Long) As Long
Public Declare Function lcBlockAddSpline Lib "Litecad.dll" (ByVal hBlock As Long, ByVal bClosed As Long, ByVal bFilled As Long) As Long
Public Declare Function lcBlockAddMline Lib "Litecad.dll" (ByVal hBlock As Long, ByVal FitType As Long, ByVal bClosed As Long) As Long
Public Declare Function lcBlockAddRect Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Xc As Double, ByVal Yc As Double, ByVal Width As Double, ByVal Height As Double, ByVal Angle As Double, ByVal bFilled As Long) As Long
Public Declare Function lcBlockAddRect2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Left As Double, ByVal Bottom As Double, ByVal Width As Double, ByVal Height As Double, ByVal Rad As Double, ByVal bFilled As Long) As Long
Public Declare Function lcBlockAddCircle Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Radius As Double, ByVal bFilled As Long) As Long
Public Declare Function lcBlockAddArc Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Radius As Double, ByVal StartAngle As Double, ByVal ArcAngle As Double) As Long
Public Declare Function lcBlockAddArc3P Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double) As Long
Public Declare Function lcBlockAddEllipse Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal R1 As Double, ByVal R2 As Double, ByVal RotAngle As Double, ByVal StartAngle As Double, ByVal ArcAngle As Double) As Long
Public Declare Function lcBlockAddText Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcBlockAddText2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Long, ByVal H As Double, ByVal WScale As Double, ByVal RotAngle As Double, ByVal Oblique As Double) As Long
Public Declare Function lcBlockAddTextWin Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double) As Long
Public Declare Function lcBlockAddTextWin2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Long, ByVal H As Double, ByVal WScale As Double, ByVal RotAngle As Double, ByVal Oblique As Double) As Long
Public Declare Function lcBlockAddMText Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal WrapWidth As Double, ByVal Align As Long, ByVal RotAngle As Double, ByVal H As Double, ByVal WScale As Double) As Long
Public Declare Function lcBlockAddArcText Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szText As String, ByVal X As Double, ByVal Y As Double, ByVal Radius As Double, ByVal StartAngle As Double, ByVal bClockwise As Long, ByVal H As Double, ByVal WScale As Double, ByVal Align As Long) As Long
Public Declare Function lcBlockAddBlockRef Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hRefBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function lcBlockAddBlockRefID Lib "Litecad.dll" (ByVal hBlock As Long, ByVal idRefBlock As Long, ByVal X As Double, ByVal Y As Double, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function lcBlockAddBlockRefIDH Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szIdRefBlock As String, ByVal X As Double, ByVal Y As Double, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function lcBlockAddImageRef Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hImage As Long, ByVal X As Double, ByVal Y As Double, ByVal Width As Double, ByVal Height As Double, ByVal bBorder As Long) As Long
Public Declare Function lcBlockAddEcw Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szFileName As String) As Long
Public Declare Function lcBlockAddAttDef Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Mode As Long, ByVal szTag As String, ByVal szPrompt As String, ByVal szDefVal As String, ByVal X As Double, ByVal Y As Double, ByVal Align As Long, ByVal H As Double, ByVal WScale As Double, ByVal RotAngle As Double, ByVal Oblique As Double) As Long
Public Declare Function lcBlockAddHatch Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szFileName As String, ByVal szPatName As String, ByVal Scal As Double, ByVal Angle As Double) As Long
Public Declare Function lcBlockAddViewport Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Lef As Double, ByVal Bot As Double, ByVal Width As Double, ByVal Height As Double, ByVal DrwPntX As Double, ByVal DrwPntY As Double, ByVal DrwScale As Double, ByVal DrwAngle As Double) As Long
Public Declare Function lcBlockAddFace Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Flags As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double, ByVal x2 As Double, ByVal y2 As Double, ByVal z2 As Double) As Long
Public Declare Function lcBlockAddFace4 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Flags As Long, ByVal x0 As Double, ByVal y0 As Double, ByVal z0 As Double, ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double, ByVal x2 As Double, ByVal y2 As Double, ByVal z2 As Double, ByVal x3 As Double, ByVal y3 As Double, ByVal z3 As Double) As Long
Public Declare Function lcBlockAddLeader Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szText As String, ByVal Xt As Double, ByVal Yt As Double, ByVal LandDist As Double, ByVal Xa As Double, ByVal Ya As Double, ByVal Attach As Long, ByVal Align As Long) As Long
Public Declare Function lcBlockAddDimRot Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal Angle As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimHor Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Yt As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimVer Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Xt As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimAli Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimAli2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X0 As Double, ByVal Y0 As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal Dt As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimOrd Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Xd As Double, ByVal Yd As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal bX As Long, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimRad Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Xc As Double, ByVal Yc As Double, ByVal Xr As Double, ByVal Yr As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimRad2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Xc As Double, ByVal Yc As Double, ByVal R As Double, ByVal Angle As Double, ByVal TextOff As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimDia Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Xc As Double, ByVal Yc As Double, ByVal Xr As Double, ByVal Yr As Double, ByVal Xt As Double, ByVal Yt As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimDia2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Xc As Double, ByVal Yc As Double, ByVal R As Double, ByVal Angle As Double, ByVal TextOff As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimAng Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Xc As Double, ByVal Yc As Double, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Xa As Double, ByVal Ya As Double, ByVal TextPos As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddDimAng2 Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double, ByVal X4 As Double, ByVal Y4 As Double, ByVal Xa As Double, ByVal Ya As Double, ByVal TextPos As Double, ByVal szText As String) As Long
Public Declare Function lcBlockAddRPlan Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockAddBezier Lib "Litecad.dll" (ByVal hBlock As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal Angle1 As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal Angle2 As Double) As Long
Public Declare Function lcBlockAddTIN Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockAddClone Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hEnt As Long) As Long
Public Declare Function lcBlockGetFirstEnt Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockGetNextEnt Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hEnt As Long) As Long
Public Declare Function lcBlockGetLastEnt Lib "Litecad.dll" (ByVal hBlock As Long) As Long
Public Declare Function lcBlockGetPrevEnt Lib "Litecad.dll" (ByVal hBlock As Long, ByVal hEnt As Long) As Long
Public Declare Function lcBlockGetEntByID Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Id As Long) As Long
Public Declare Function lcBlockGetEntByIDH Lib "Litecad.dll" (ByVal hBlock As Long, ByVal szId As String) As Long
Public Declare Function lcBlockGetEntByKey Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Key As Long) As Long
Public Declare Function lcBlockGetTIN Lib "Litecad.dll" (ByVal hBlock As Long, ByVal Index As Long) As Long
Public Declare Function lcBlockUnselect Lib "Litecad.dll" (ByVal hBlock As Long) As Long
